--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1254,3 +1254,52 @@
   year      = {2016},
   publisher = {IEEE}
 }
+
+@misc{mpu9250,
+  title        = {Mpu-9250 six-axis (gyro + accelerometer) mems motiontracking devices.},
+  howpublished = {\url{https://invensense.tdk.com/products/motion-tracking/9-axis/mpu-9250/}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
+
+@misc{mpu9250specification,
+  title        = {MPU-9250 Product Specification.},
+  howpublished = {\url{https://cdn.sparkfun.com/assets/learn_tutorials/5/5/0/MPU9250REV1.0.pdf}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
+
+@misc{mpu6050,
+  title        = {Mpu-6050 six-axis (gyro + accelerometer) mems motiontracking devices.},
+  howpublished = {\url{https://invensense.tdk.com/products/motion-tracking/6-axis/mpu-6050/}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
+
+@misc{ak8963c,
+  title        = {AK8963 3-axis Electronic Compass.},
+  howpublished = {\url{https://download.mikroe.com/documents/datasheets/ak8963c-datasheet.pdf}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
+
+@misc{micropython,
+  title        = {MicroPython documentation.},
+  howpublished = {\url{http://docs.micropython.org/en/latest/}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
+
+@misc{ahrs,
+  title        = {AHRS: Attitude and Heading Reference Systems.},
+  howpublished = {\url{https://ahrs.readthedocs.io/en/latest/}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
+
+@misc{lopy,
+  title        = {AHRS: Attitude and Heading Reference Systems.},
+  howpublished = {\url{https://docs.pycom.io/datasheets/development/lopy/}},
+  author       = {Online},
+  note         = {Accessed: 2021-04-29}
+}
