--- a/tables/overall.tex
+++ b/tables/overall.tex
@@ -24,7 +24,7 @@
                 Average       & 2.04                    & 17.02                  & 2.80            & 23.36
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{ Overall ranking of how every algorithm performed in the given test. }
+        \label{tab:overall}
     \end{center}
 \end{table}
