--- a/tables/squares/spiral.tex
+++ b/tables/squares/spiral.tex
@@ -10,7 +10,7 @@
                 Average     & 11.13                   & 13.25                  & 16.38           & 19.50
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{Spiral position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:spiral}
     \end{center}
 \end{table}
