--- a/tables/squares/square4.tex
+++ b/tables/squares/square4.tex
@@ -1,17 +1,17 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 5.88  & 12.25 & 7.29 & 15.19              \\            AQUA            & 3.86  & 8.05 & 4.80 & 10.01              \\            Complementary            & 0.91  & 1.91 & 1.39 & 2.89              \\            Davenport            & 0.35  & 0.72 & 0.44 & 0.91              \\            EKF            & 0.88  & 1.84 & 1.54 & 3.21              \\            FAMC            & 5.66  & 11.78 & 6.62 & 13.80              \\            FLAE            & 0.34  & 0.70 & 0.39 & 0.80              \\            Fourati            & 8.77  & 18.28 & 9.74 & 20.29              \\            Madgwick            & 0.75  & 1.57 & 1.17 & 2.43              \\            Mahony            & 0.30  & 0.62 & 0.37 & 0.78              \\            OLEQ            & 0.39  & 0.81 & 0.58 & 1.20              \\            QUEST            & 4.55  & 9.49 & 3.97 & 8.28              \\            ROLEQ            & 0.57  & 1.19 & 0.84 & 1.74              \\            SAAM            & 0.30  & 0.62 & 0.38 & 0.80              \\            Tilt            & 0.30  & 0.62 & 0.38 & 0.80              \\
-            \hline
-            Average & 2.25 & 4.70 & 2.66 & 5.54
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 5.88                    & 12.25                  & 7.29            & 15.19          \\            AQUA            & 3.86  & 8.05 & 4.80 & 10.01              \\            Complementary            & 0.91  & 1.91 & 1.39 & 2.89              \\            Davenport            & 0.35  & 0.72 & 0.44 & 0.91              \\            EKF            & 0.88  & 1.84 & 1.54 & 3.21              \\            FAMC            & 5.66  & 11.78 & 6.62 & 13.80              \\            FLAE            & 0.34  & 0.70 & 0.39 & 0.80              \\            Fourati            & 8.77  & 18.28 & 9.74 & 20.29              \\            Madgwick            & 0.75  & 1.57 & 1.17 & 2.43              \\            Mahony            & 0.30  & 0.62 & 0.37 & 0.78              \\            OLEQ            & 0.39  & 0.81 & 0.58 & 1.20              \\            QUEST            & 4.55  & 9.49 & 3.97 & 8.28              \\            ROLEQ            & 0.57  & 1.19 & 0.84 & 1.74              \\            SAAM            & 0.30  & 0.62 & 0.38 & 0.80              \\            Tilt            & 0.30  & 0.62 & 0.38 & 0.80              \\
+                \hline
+                Average     & 2.25                    & 4.70                   & 2.66            & 5.54
+            \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{4 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:4_square}
     \end{center}
 \end{table}
