--- a/tables/squares/squares.tex
+++ b/tables/squares/squares.tex
@@ -10,7 +10,7 @@
                 Average     & 37.93                   & 45.15                  & 49.95           & 59.47
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{Squares position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:squares}
     \end{center}
 \end{table}
