--- a/tables/triangles/triangle28.tex
+++ b/tables/triangles/triangle28.tex
@@ -10,7 +10,7 @@
                 Average     & 10.31                   & 12.27                  & 16.59           & 19.75
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{28 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:28_square}
     \end{center}
 \end{table}
