--- a/tables/triangles/triangle4.tex
+++ b/tables/triangles/triangle4.tex
@@ -1,17 +1,17 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 4.50  & 37.47 & 6.51 & 54.28              \\            AQUA            & 2.91  & 24.24 & 5.66 & 47.18              \\            Complementary            & 0.85  & 7.08 & 1.46 & 12.14              \\            Davenport            & 0.93  & 7.75 & 1.36 & 11.35              \\            EKF            & 1.02  & 8.50 & 0.92 & 7.66              \\            FAMC            & 4.23  & 35.23 & 6.19 & 51.56              \\            FLAE            & 0.91  & 7.54 & 1.30 & 10.82              \\            Fourati            & 7.04  & 58.67 & 8.32 & 69.35              \\            Madgwick            & 1.68  & 14.03 & 2.00 & 16.63              \\            Mahony            & 0.79  & 6.60 & 0.97 & 8.11              \\            OLEQ            & 0.79  & 6.57 & 1.02 & 8.53              \\            QUEST            & 2.46  & 20.54 & 3.30 & 27.49              \\            ROLEQ            & 0.78  & 6.54 & 0.84 & 6.98              \\            SAAM            & 0.87  & 7.24 & 1.10 & 9.16              \\            Tilt            & 0.87  & 7.24 & 1.10 & 9.16              \\
-            \hline
-            Average & 2.04 & 17.02 & 2.80 & 23.36
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 4.50                    & 37.47                  & 6.51            & 54.28          \\            AQUA            & 2.91  & 24.24 & 5.66 & 47.18              \\            Complementary            & 0.85  & 7.08 & 1.46 & 12.14              \\            Davenport            & 0.93  & 7.75 & 1.36 & 11.35              \\            EKF            & 1.02  & 8.50 & 0.92 & 7.66              \\            FAMC            & 4.23  & 35.23 & 6.19 & 51.56              \\            FLAE            & 0.91  & 7.54 & 1.30 & 10.82              \\            Fourati            & 7.04  & 58.67 & 8.32 & 69.35              \\            Madgwick            & 1.68  & 14.03 & 2.00 & 16.63              \\            Mahony            & 0.79  & 6.60 & 0.97 & 8.11              \\            OLEQ            & 0.79  & 6.57 & 1.02 & 8.53              \\            QUEST            & 2.46  & 20.54 & 3.30 & 27.49              \\            ROLEQ            & 0.78  & 6.54 & 0.84 & 6.98              \\            SAAM            & 0.87  & 7.24 & 1.10 & 9.16              \\            Tilt            & 0.87  & 7.24 & 1.10 & 9.16              \\
+                \hline
+                Average     & 2.04                    & 17.02                  & 2.80            & 23.36
+            \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{4 meter triangle position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:4_triangle}
     \end{center}
 \end{table}
