--- a/tables/lines/line16.tex
+++ b/tables/lines/line16.tex
@@ -1,17 +1,17 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 0.89  & 5.59 & 3.97 & 24.78              \\            AQUA            & 6.41  & 40.04 & 9.27 & 57.92              \\            Complementary            & 0.49  & 3.08 & 2.16 & 13.47              \\            Davenport            & 0.51  & 3.17 & 2.16 & 13.52              \\            EKF            & 0.67  & 4.17 & 2.22 & 13.86              \\            FAMC            & 0.43  & 2.69 & 2.16 & 13.49              \\            FLAE            & 0.51  & 3.17 & 2.16 & 13.52              \\            Fourati            & 1.09  & 6.83 & 4.80 & 29.98              \\            Madgwick            & 0.49  & 3.05 & 2.15 & 13.47              \\            Mahony            & 0.48  & 3.01 & 2.11 & 13.21              \\            OLEQ            & 0.68  & 4.28 & 3.54 & 22.14              \\            QUEST            & 2.61  & 16.33 & 3.79 & 23.72              \\            ROLEQ            & 0.72  & 4.51 & 3.56 & 22.26              \\            SAAM            & 0.48  & 3.02 & 2.14 & 13.35              \\            Tilt            & 0.48  & 3.02 & 2.14 & 13.35              \\
-            \hline
-            Average & 1.13 & 7.06 & 3.22 & 20.14
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 0.89                    & 5.59                   & 3.97            & 24.78          \\            AQUA            & 6.41  & 40.04 & 9.27 & 57.92              \\            Complementary            & 0.49  & 3.08 & 2.16 & 13.47              \\            Davenport            & 0.51  & 3.17 & 2.16 & 13.52              \\            EKF            & 0.67  & 4.17 & 2.22 & 13.86              \\            FAMC            & 0.43  & 2.69 & 2.16 & 13.49              \\            FLAE            & 0.51  & 3.17 & 2.16 & 13.52              \\            Fourati            & 1.09  & 6.83 & 4.80 & 29.98              \\            Madgwick            & 0.49  & 3.05 & 2.15 & 13.47              \\            Mahony            & 0.48  & 3.01 & 2.11 & 13.21              \\            OLEQ            & 0.68  & 4.28 & 3.54 & 22.14              \\            QUEST            & 2.61  & 16.33 & 3.79 & 23.72              \\            ROLEQ            & 0.72  & 4.51 & 3.56 & 22.26              \\            SAAM            & 0.48  & 3.02 & 2.14 & 13.35              \\            Tilt            & 0.48  & 3.02 & 2.14 & 13.35              \\
+                \hline
+                Average     & 1.13                    & 7.06                   & 3.22            & 20.14
+            \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{16 meter line position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:16_line}
     \end{center}
 \end{table}
