--- a/tables/lines/line28.tex
+++ b/tables/lines/line28.tex
@@ -1,17 +1,31 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 1.29  & 4.61 & 6.08 & 21.73              \\            AQUA            & 8.66  & 30.93 & 14.77 & 52.75              \\            Complementary            & 0.52  & 1.85 & 4.31 & 15.41              \\            Davenport            & 0.73  & 2.60 & 5.47 & 19.53              \\            EKF            & 0.76  & 2.73 & 4.35 & 15.55              \\            FAMC            & 0.50  & 1.80 & 4.33 & 15.45              \\            FLAE            & 0.73  & 2.59 & 5.47 & 19.53              \\            Fourati            & 1.07  & 3.81 & 6.21 & 22.18              \\            Madgwick            & 0.55  & 1.96 & 4.29 & 15.32              \\            Mahony            & 0.53  & 1.88 & 4.19 & 14.98              \\            OLEQ            & 0.69  & 2.47 & 5.35 & 19.11              \\            QUEST            & 3.08  & 11.01 & 11.72 & 41.87              \\            ROLEQ            & 0.83  & 2.95 & 5.39 & 19.24              \\            SAAM            & 0.51  & 1.81 & 4.23 & 15.09              \\            Tilt            & 0.51  & 1.81 & 4.23 & 15.09              \\
-            \hline
-            Average & 1.40 & 4.99 & 6.03 & 21.52
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate   & 1.29                    & 4.61                   & 6.08            & 21.73          \\
+                AQUA          & 8.66                    & 30.93                  & 14.77           & 52.75          \\
+                Complementary & 0.52                    & 1.85                   & 4.31            & 15.41          \\
+                Davenport     & 0.73                    & 2.60                   & 5.47            & 19.53          \\
+                EKF           & 0.76                    & 2.73                   & 4.35            & 15.55          \\
+                FAMC          & 0.50                    & 1.80                   & 4.33            & 15.45          \\
+                FLAE          & 0.73                    & 2.59                   & 5.47            & 19.53          \\
+                Fourati       & 1.07                    & 3.81                   & 6.21            & 22.18          \\
+                Madgwick      & 0.55                    & 1.96                   & 4.29            & 15.32          \\
+                Mahony        & 0.53                    & 1.88                   & 4.19            & 14.98          \\
+                OLEQ          & 0.69                    & 2.47                   & 5.35            & 19.11          \\
+                QUEST         & 3.08                    & 11.01                  & 11.72           & 41.87          \\
+                ROLEQ         & 0.83                    & 2.95                   & 5.39            & 19.24          \\
+                SAAM          & 0.51                    & 1.81                   & 4.23            & 15.09          \\
+                Tilt          & 0.51                    & 1.81                   & 4.23            & 15.09          \\
+                \hline
+                Average       & 1.40                    & 4.99                   & 6.03            & 21.52
+            \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{28 meter line position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:28_line}
     \end{center}
 \end{table}
