--- a/tables/squares/square16.tex
+++ b/tables/squares/square16.tex
@@ -1,17 +1,17 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 21.40  & 44.58 & 27.63 & 57.57              \\            AQUA            & 9.62  & 20.04 & 10.47 & 21.80              \\            Complementary            & 12.68  & 26.41 & 13.10 & 27.29              \\            Davenport            & 1.55  & 3.23 & 2.17 & 4.52              \\            EKF            & 1.74  & 3.63 & 2.41 & 5.03              \\            FAMC            & 19.84  & 41.32 & 23.54 & 49.03              \\            FLAE            & 1.36  & 2.84 & 1.82 & 3.79              \\            Fourati            & 31.60  & 65.84 & 36.35 & 75.72              \\            Madgwick            & 1.37  & 2.86 & 2.56 & 5.34              \\            Mahony            & 1.76  & 3.66 & 2.15 & 4.48              \\            OLEQ            & 2.16  & 4.50 & 2.83 & 5.89              \\            QUEST            & 15.99  & 33.32 & 19.84 & 41.33              \\            ROLEQ            & 2.30  & 4.79 & 2.76 & 5.76              \\            SAAM            & 1.67  & 3.47 & 3.06 & 6.38              \\            Tilt            & 1.67  & 3.47 & 3.06 & 6.38              \\
-            \hline
-            Average & 8.45 & 17.60 & 10.25 & 21.35
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 21.40                   & 44.58                  & 27.63           & 57.57          \\            AQUA            & 9.62  & 20.04 & 10.47 & 21.80              \\            Complementary            & 12.68  & 26.41 & 13.10 & 27.29              \\            Davenport            & 1.55  & 3.23 & 2.17 & 4.52              \\            EKF            & 1.74  & 3.63 & 2.41 & 5.03              \\            FAMC            & 19.84  & 41.32 & 23.54 & 49.03              \\            FLAE            & 1.36  & 2.84 & 1.82 & 3.79              \\            Fourati            & 31.60  & 65.84 & 36.35 & 75.72              \\            Madgwick            & 1.37  & 2.86 & 2.56 & 5.34              \\            Mahony            & 1.76  & 3.66 & 2.15 & 4.48              \\            OLEQ            & 2.16  & 4.50 & 2.83 & 5.89              \\            QUEST            & 15.99  & 33.32 & 19.84 & 41.33              \\            ROLEQ            & 2.30  & 4.79 & 2.76 & 5.76              \\            SAAM            & 1.67  & 3.47 & 3.06 & 6.38              \\            Tilt            & 1.67  & 3.47 & 3.06 & 6.38              \\
+                \hline
+                Average     & 8.45                    & 17.60                  & 10.25           & 21.35
+            \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{16 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:16_square}
     \end{center}
 \end{table}
