--- a/tables/squares/square28.tex
+++ b/tables/squares/square28.tex
@@ -1,15 +1,29 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 34.07  & 30.42 & 39.11 & 34.92              \\            AQUA            & 11.82  & 10.56 & 14.64 & 13.07              \\            Complementary            & 12.75  & 11.38 & 14.68 & 13.11              \\            Davenport            & 2.32  & 2.07 & 6.44 & 5.75              \\            EKF            & 3.81  & 3.41 & 6.39 & 5.71              \\            FAMC            & 31.54  & 28.16 & 41.11 & 36.71              \\            FLAE            & 2.28  & 2.03 & 6.59 & 5.88              \\            Fourati            & 54.07  & 48.28 & 56.38 & 50.34              \\            Madgwick            & 3.35  & 2.99 & 6.41 & 5.73              \\            Mahony            & 2.63  & 2.35 & 6.42 & 5.73              \\            OLEQ            & 2.67  & 2.38 & 7.16 & 6.40              \\            QUEST            & 22.92  & 20.46 & 33.83 & 30.21              \\            ROLEQ            & 2.85  & 2.54 & 7.54 & 6.73              \\            SAAM            & 2.65  & 2.36 & 6.36 & 5.68              \\            Tilt            & 2.65  & 2.36 & 6.36 & 5.68              \\
-            \hline
-            Average & 12.82 & 11.45 & 17.30 & 15.44
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate   & 34.07                   & 30.42                  & 39.11           & 34.92          \\
+                AQUA          & 11.82                   & 10.56                  & 14.64           & 13.07          \\
+                Complementary & 12.75                   & 11.38                  & 14.68           & 13.11          \\
+                Davenport     & 2.32                    & 2.07                   & 6.44            & 5.75           \\
+                EKF           & 3.81                    & 3.41                   & 6.39            & 5.71           \\
+                FAMC          & 31.54                   & 28.16                  & 41.11           & 36.71          \\
+                FLAE          & 2.28                    & 2.03                   & 6.59            & 5.88           \\
+                Fourati       & 54.07                   & 48.28                  & 56.38           & 50.34          \\
+                Madgwick      & 3.35                    & 2.99                   & 6.41            & 5.73           \\
+                Mahony        & 2.63                    & 2.35                   & 6.42            & 5.73           \\
+                OLEQ          & 2.67                    & 2.38                   & 7.16            & 6.40           \\
+                QUEST         & 22.92                   & 20.46                  & 33.83           & 30.21          \\
+                ROLEQ         & 2.85                    & 2.54                   & 7.54            & 6.73           \\
+                SAAM          & 2.65                    & 2.36                   & 6.36            & 5.68           \\
+                Tilt          & 2.65                    & 2.36                   & 6.36            & 5.68           \\
+                \hline
+                Average       & 12.82                   & 11.45                  & 17.30           & 15.44
+            \end{tabular}
         }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
