Save before sending

--- a/tables/squares/squares.tex
+++ b/tables/squares/squares.tex
@@ -1,16 +1,31 @@
 \begin{table}[H]
     \begin{center}
         \resizebox{1\linewidth}{!}{
+
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate & 112.95                  & 134.46                 & 122.64          & 146.00         \\            AQUA            & 26.02  & 30.97 & 35.28 & 42.00              \\            Complementary            & 43.81  & 52.16 & 64.79 & 77.13              \\            Davenport            & 10.97  & 13.05 & 13.38 & 15.93              \\            EKF            & 1.70  & 2.02 & 5.16 & 6.15              \\            FAMC            & 152.41  & 181.44 & 188.05 & 223.87              \\            FLAE            & 12.06  & 14.36 & 17.28 & 20.58              \\            Fourati            & 90.63  & 107.89 & 100.72 & 119.90              \\            Madgwick            & 8.15  & 9.70 & 8.18 & 9.74              \\            Mahony            & 1.46  & 1.73 & 4.27 & 5.09              \\            OLEQ            & 1.69  & 2.01 & 5.05 & 6.01              \\            QUEST            & 82.11  & 97.75 & 152.58 & 181.64              \\            ROLEQ            & 1.13  & 1.35 & 3.64 & 4.34              \\            SAAM            & 11.94  & 14.21 & 14.15 & 16.85              \\            Tilt            & 11.94  & 14.21 & 14.15 & 16.85              \\
+                AngularRate   & 120.12                  & 107.25                 & 140.01          & 125.01         \\
+                AQUA          & 26.02                   & 23.23                  & 37.20           & 33.21          \\
+                Complementary & 68.64                   & 61.29                  & 92.21           & 82.33          \\
+                Davenport     & 1.50                    & 1.34                   & 4.86            & 4.34           \\
+                EKF           & 5.83                    & 5.20                   & 9.91            & 8.84           \\
+                FAMC          & 152.41                  & 136.08                 & 206.18          & 184.09         \\
+                FLAE          & 1.87                    & 1.67                   & 7.16            & 6.40           \\
+                Fourati       & 96.86                   & 86.48                  & 109.99          & 98.21          \\
+                Madgwick      & 5.56                    & 4.97                   & 10.05           & 8.97           \\
+                Mahony        & 1.48                    & 1.32                   & 4.40            & 3.93           \\
+                OLEQ          & 1.99                    & 1.78                   & 6.67            & 5.96           \\
+                QUEST         & 82.11                   & 73.31                  & 159.73          & 142.62         \\
+                ROLEQ         & 1.75                    & 1.56                   & 5.93            & 5.29           \\
+                SAAM          & 1.47                    & 1.32                   & 5.00            & 4.47           \\
+                Tilt          & 1.47                    & 1.32                   & 5.00            & 4.47           \\
                 \hline
-                Average     & 37.93                   & 45.15                  & 49.95           & 59.47
+                Average       & 37.94                   & 33.87                  & 53.62           & 47.88
             \end{tabular}
         }
-        \caption{Squares position estimation error (displacement and turn) of the sensor fusion algorithms. }
-        \label{tab:squares}
+        \caption{Accelerometer Specifications. }
+        \label{tab:accelerometer_specification}
     \end{center}
 \end{table}
