--- a/tables/squares/spiral.tex
+++ b/tables/squares/spiral.tex
@@ -1,16 +1,17 @@
 \begin{table}[H]
     \begin{center}
-        \resizebox{1\linewidth}{!}{
-            \begin{tabular}[t]{lcccc}
-                \hline
-                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
-                \hline
-                AngularRate & 39.61                   & 47.15                  & 56.20           & 66.90          \\            AQUA            & 3.41  & 4.07 & 5.90 & 7.03              \\            Complementary            & 2.32  & 2.76 & 6.16 & 7.34              \\            Davenport            & 2.31  & 2.75 & 3.64 & 4.34              \\            EKF            & 2.62  & 3.12 & 5.35 & 6.37              \\            FAMC            & 39.10  & 46.55 & 43.35 & 51.60              \\            FLAE            & 2.79  & 3.32 & 4.05 & 4.82              \\            Fourati            & 42.44  & 50.53 & 57.49 & 68.44              \\            Madgwick            & 2.26  & 2.69 & 2.85 & 3.39              \\            Mahony            & 2.48  & 2.96 & 4.53 & 5.40              \\            OLEQ            & 2.41  & 2.87 & 5.57 & 6.63              \\            QUEST            & 17.84  & 21.23 & 37.44 & 44.57              \\            ROLEQ            & 2.48  & 2.95 & 5.47 & 6.51              \\            SAAM            & 2.46  & 2.93 & 3.84 & 4.57              \\            Tilt            & 2.46  & 2.93 & 3.84 & 4.57              \\
-                \hline
-                Average     & 11.13                   & 13.25                  & 16.38           & 19.50
-            \end{tabular}
+    \resizebox{1\linewidth}{!}{
+
+        \begin{tabular}[t]{lcccc}
+            \hline
+            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
+            \hline 
+            AngularRate            & 39.61  & 35.36 & 52.75 & 47.10              \\            AQUA            & 3.41  & 3.05 & 5.92 & 5.29              \\            Complementary            & 4.11  & 3.67 & 6.75 & 6.03              \\            Davenport            & 2.18  & 1.95 & 5.59 & 4.99              \\            EKF            & 2.62  & 2.34 & 5.35 & 4.78              \\            FAMC            & 39.10  & 34.91 & 48.27 & 43.09              \\            FLAE            & 3.29  & 2.94 & 5.07 & 4.53              \\            Fourati            & 42.44  & 37.89 & 54.37 & 48.55              \\            Madgwick            & 2.35  & 2.10 & 5.00 & 4.46              \\            Mahony            & 2.25  & 2.01 & 5.55 & 4.95              \\            OLEQ            & 2.41  & 2.16 & 5.81 & 5.19              \\            QUEST            & 17.84  & 15.92 & 36.06 & 32.19              \\            ROLEQ            & 2.48  & 2.21 & 5.65 & 5.04              \\            SAAM            & 2.26  & 2.02 & 5.54 & 4.95              \\            Tilt            & 2.26  & 2.02 & 5.54 & 4.95              \\
+            \hline
+            Average & 11.24 & 10.04 & 16.88 & 15.07
+        \end{tabular}
         }
-        \caption{Spiral position estimation error (displacement and turn) of the sensor fusion algorithms. }
-        \label{tab:spiral}
+        \caption{Accelerometer Specifications. }
+        \label{tab:accelerometer_specification}
     \end{center}
 \end{table}
