--- a/tables/squares/spiral.tex
+++ b/tables/squares/spiral.tex
@@ -1,15 +1,29 @@
 \begin{table}[H]
     \begin{center}
-    \resizebox{1\linewidth}{!}{
+        \resizebox{1\linewidth}{!}{
 
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 39.61  & 35.36 & 52.75 & 47.10              \\            AQUA            & 3.41  & 3.05 & 5.92 & 5.29              \\            Complementary            & 4.11  & 3.67 & 6.75 & 6.03              \\            Davenport            & 2.18  & 1.95 & 5.59 & 4.99              \\            EKF            & 2.62  & 2.34 & 5.35 & 4.78              \\            FAMC            & 39.10  & 34.91 & 48.27 & 43.09              \\            FLAE            & 3.29  & 2.94 & 5.07 & 4.53              \\            Fourati            & 42.44  & 37.89 & 54.37 & 48.55              \\            Madgwick            & 2.35  & 2.10 & 5.00 & 4.46              \\            Mahony            & 2.25  & 2.01 & 5.55 & 4.95              \\            OLEQ            & 2.41  & 2.16 & 5.81 & 5.19              \\            QUEST            & 17.84  & 15.92 & 36.06 & 32.19              \\            ROLEQ            & 2.48  & 2.21 & 5.65 & 5.04              \\            SAAM            & 2.26  & 2.02 & 5.54 & 4.95              \\            Tilt            & 2.26  & 2.02 & 5.54 & 4.95              \\
-            \hline
-            Average & 11.24 & 10.04 & 16.88 & 15.07
-        \end{tabular}
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate   & 39.79                   & 35.52                  & 56.20           & 50.18          \\
+                AQUA          & 2.94                    & 2.62                   & 5.89            & 5.26           \\
+                Complementary & 2.35                    & 2.10                   & 7.03            & 6.28           \\
+                Davenport     & 1.91                    & 1.71                   & 3.64            & 3.25           \\
+                EKF           & 2.16                    & 1.93                   & 2.99            & 2.67           \\
+                FAMC          & 39.24                   & 35.04                  & 43.47           & 38.81          \\
+                FLAE          & 2.46                    & 2.19                   & 4.05            & 3.61           \\
+                Fourati       & 39.77                   & 35.51                  & 56.46           & 50.41          \\
+                Madgwick      & 2.03                    & 1.81                   & 2.85            & 2.54           \\
+                Mahony        & 2.06                    & 1.84                   & 4.53            & 4.05           \\
+                OLEQ          & 2.13                    & 1.90                   & 4.01            & 3.58           \\
+                QUEST         & 17.98                   & 16.05                  & 35.75           & 31.92          \\
+                ROLEQ         & 2.25                    & 2.01                   & 4.36            & 3.90           \\
+                SAAM          & 2.05                    & 1.83                   & 3.84            & 3.43           \\
+                Tilt          & 2.05                    & 1.83                   & 3.84            & 3.43           \\
+                \hline
+                Average       & 10.74                   & 9.59                   & 15.93           & 14.22
+            \end{tabular}
         }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
