--- a/tables/triangles/triangle16.tex
+++ b/tables/triangles/triangle16.tex
@@ -4,11 +4,25 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate & 12.53                   & 26.10                  & 18.91           & 39.40          \\            AQUA            & 7.48  & 15.58 & 12.02 & 25.05              \\            Complementary            & 2.35  & 4.90 & 3.72 & 7.75              \\            Davenport            & 1.85  & 3.86 & 2.57 & 5.35              \\            EKF            & 2.03  & 4.22 & 2.45 & 5.10              \\            FAMC            & 11.55  & 24.05 & 19.62 & 40.87              \\            FLAE            & 1.85  & 3.86 & 2.49 & 5.18              \\            Fourati            & 21.75  & 45.32 & 29.43 & 61.32              \\            Madgwick            & 6.25  & 13.02 & 7.85 & 16.36              \\            Mahony            & 1.64  & 3.43 & 2.20 & 4.58              \\            OLEQ            & 1.66  & 3.46 & 3.76 & 7.84              \\            QUEST            & 8.39  & 17.48 & 17.65 & 36.77              \\            ROLEQ            & 1.82  & 3.80 & 4.36 & 9.07              \\            SAAM            & 1.67  & 3.48 & 2.13 & 4.43              \\            Tilt            & 1.67  & 3.48 & 2.13 & 4.43              \\
+                AngularRate   & 12.53                   & 26.10                  & 18.91           & 39.40          \\
+                AQUA          & 7.48                    & 15.58                  & 12.02           & 25.05          \\
+                Complementary & 2.35                    & 4.90                   & 3.72            & 7.75           \\
+                Davenport     & 1.85                    & 3.86                   & 2.57            & 5.35           \\
+                EKF           & 2.03                    & 4.22                   & 2.45            & 5.10           \\
+                FAMC          & 11.55                   & 24.05                  & 19.62           & 40.87          \\
+                FLAE          & 1.85                    & 3.86                   & 2.49            & 5.18           \\
+                Fourati       & 21.75                   & 45.32                  & 29.43           & 61.32          \\
+                Madgwick      & 6.25                    & 13.02                  & 7.85            & 16.36          \\
+                Mahony        & 1.64                    & 3.43                   & 2.20            & 4.58           \\
+                OLEQ          & 1.66                    & 3.46                   & 3.76            & 7.84           \\
+                QUEST         & 8.39                    & 17.48                  & 17.65           & 36.77          \\
+                ROLEQ         & 1.82                    & 3.80                   & 4.36            & 9.07           \\
+                SAAM          & 1.67                    & 3.48                   & 2.13            & 4.43           \\
+                Tilt          & 1.67                    & 3.48                   & 2.13            & 4.43           \\
                 \hline
-                Average     & 5.63                    & 11.74                  & 8.75            & 18.23
+                Average       & 5.63                    & 11.74                  & 8.75            & 18.23
             \end{tabular}
         }
         \caption{16 meter triangle position estimation error (displacement and turn) of the sensor fusion algorithms. }
