--- a/tables/squares/spiral.tex
+++ b/tables/squares/spiral.tex
@@ -25,7 +25,7 @@
                 Average       & 10.74                   & 9.59                   & 15.93           & 14.22
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{Spiral position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:spiral}
     \end{center}
 \end{table}
