--- a/tables/squares/square28.tex
+++ b/tables/squares/square28.tex
@@ -25,7 +25,7 @@
                 Average       & 12.82                   & 11.45                  & 17.30           & 15.44
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{28 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:28_square}
     \end{center}
 \end{table}
