--- a/tables/squares/squares.tex
+++ b/tables/squares/squares.tex
@@ -25,7 +25,7 @@
                 Average       & 37.94                   & 33.87                  & 53.62           & 47.88
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
+        \caption{Squares position estimation error (displacement and turn) of the sensor fusion algorithms. }
+        \label{tab:squares}
     \end{center}
 \end{table}
