--- a/thesis.tex
+++ b/thesis.tex
@@ -51,6 +51,6 @@
 %\nolinenumbers
 
 % ---- Bibliography ----
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{mybibliography.bib}
 \end{document}
