--- a/tables/squares/square16.tex
+++ b/tables/squares/square16.tex
@@ -4,14 +4,29 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate & 21.40                   & 44.58                  & 27.63           & 57.57          \\            AQUA            & 9.62  & 20.04 & 10.47 & 21.80              \\            Complementary            & 12.68  & 26.41 & 13.10 & 27.29              \\            Davenport            & 1.55  & 3.23 & 2.17 & 4.52              \\            EKF            & 1.74  & 3.63 & 2.41 & 5.03              \\            FAMC            & 19.84  & 41.32 & 23.54 & 49.03              \\            FLAE            & 1.36  & 2.84 & 1.82 & 3.79              \\            Fourati            & 31.60  & 65.84 & 36.35 & 75.72              \\            Madgwick            & 1.37  & 2.86 & 2.56 & 5.34              \\            Mahony            & 1.76  & 3.66 & 2.15 & 4.48              \\            OLEQ            & 2.16  & 4.50 & 2.83 & 5.89              \\            QUEST            & 15.99  & 33.32 & 19.84 & 41.33              \\            ROLEQ            & 2.30  & 4.79 & 2.76 & 5.76              \\            SAAM            & 1.67  & 3.47 & 3.06 & 6.38              \\            Tilt            & 1.67  & 3.47 & 3.06 & 6.38              \\
+                AngularRate   & 21.87                   & 34.17                  & 26.78           & 41.85          \\
+                AQUA          & 10.13                   & 15.83                  & 10.25           & 16.02          \\
+                Complementary & 15.26                   & 23.85                  & 13.69           & 21.40          \\
+                Davenport     & 2.33                    & 3.65                   & 2.15            & 3.36           \\
+                EKF           & 2.32                    & 3.63                   & 2.35            & 3.67           \\
+                FAMC          & 20.73                   & 32.40                  & 25.26           & 39.47          \\
+                FLAE          & 2.09                    & 3.27                   & 1.82            & 2.84           \\
+                Fourati       & 34.16                   & 53.37                  & 36.37           & 56.83          \\
+                Madgwick      & 1.93                    & 3.02                   & 1.98            & 3.09           \\
+                Mahony        & 1.94                    & 3.02                   & 2.13            & 3.33           \\
+                OLEQ          & 3.52                    & 5.50                   & 2.64            & 4.12           \\
+                QUEST         & 17.97                   & 28.07                  & 19.53           & 30.52          \\
+                ROLEQ         & 3.64                    & 5.69                   & 2.76            & 4.32           \\
+                SAAM          & 2.15                    & 3.36                   & 2.12            & 3.31           \\
+                Tilt          & 2.15                    & 3.36                   & 2.12            & 3.31           \\
+
                 \hline
-                Average     & 8.45                    & 17.60                  & 10.25           & 21.35
+                Average       & 9.48                    & 14.81                  & 10.13           & 15.83
             \end{tabular}
         }
-        \caption{16 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
-        \label{tab:16_square}
+        \caption{Accelerometer Specifications. }
+        \label{tab:accelerometer_specification}
     \end{center}
 \end{table}
