--- a/tables/squares/square4.tex
+++ b/tables/squares/square4.tex
@@ -4,11 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate & 5.88                    & 12.25                  & 7.29            & 15.19          \\            AQUA            & 3.86  & 8.05 & 4.80 & 10.01              \\            Complementary            & 0.91  & 1.91 & 1.39 & 2.89              \\            Davenport            & 0.35  & 0.72 & 0.44 & 0.91              \\            EKF            & 0.88  & 1.84 & 1.54 & 3.21              \\            FAMC            & 5.66  & 11.78 & 6.62 & 13.80              \\            FLAE            & 0.34  & 0.70 & 0.39 & 0.80              \\            Fourati            & 8.77  & 18.28 & 9.74 & 20.29              \\            Madgwick            & 0.75  & 1.57 & 1.17 & 2.43              \\            Mahony            & 0.30  & 0.62 & 0.37 & 0.78              \\            OLEQ            & 0.39  & 0.81 & 0.58 & 1.20              \\            QUEST            & 4.55  & 9.49 & 3.97 & 8.28              \\            ROLEQ            & 0.57  & 1.19 & 0.84 & 1.74              \\            SAAM            & 0.30  & 0.62 & 0.38 & 0.80              \\            Tilt            & 0.30  & 0.62 & 0.38 & 0.80              \\
+                AngularRate   & 5.97                    & 37.29                  & 7.29            & 45.58          \\
+                AQUA          & 4.12                    & 25.75                  & 4.20            & 26.23          \\
+                Complementary & 1.20                    & 7.50                   & 1.46            & 9.13           \\
+                Davenport     & 0.69                    & 4.31                   & 0.43            & 2.70           \\
+                EKF           & 1.09                    & 6.79                   & 1.53            & 9.56           \\
+                FAMC          & 6.01                    & 37.57                  & 6.98            & 43.61          \\
+                FLAE          & 0.69                    & 4.32                   & 0.38            & 2.37           \\
+                Fourati       & 9.08                    & 56.78                  & 9.74            & 60.87          \\
+                Madgwick      & 1.02                    & 6.40                   & 1.18            & 7.36           \\
+                Mahony        & 0.53                    & 3.34                   & 0.37            & 2.29           \\
+                OLEQ          & 0.60                    & 3.74                   & 0.52            & 3.23           \\
+                QUEST         & 5.07                    & 31.71                  & 5.57            & 34.79          \\
+                ROLEQ         & 0.78                    & 4.90                   & 0.88            & 5.48           \\
+                SAAM          & 0.59                    & 3.69                   & 0.37            & 2.33           \\
+                Tilt          & 0.59                    & 3.69                   & 0.37            & 2.33           \\
+
                 \hline
-                Average     & 2.25                    & 4.70                   & 2.66            & 5.54
+                Average       & 2.54                    & 15.85                  & 2.75            & 17.19
             \end{tabular}
         }
         \caption{4 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
