--- a/tables/triangles/triangle4.tex
+++ b/tables/triangles/triangle4.tex
@@ -4,11 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate & 4.50                    & 37.47                  & 6.51            & 54.28          \\            AQUA            & 2.91  & 24.24 & 5.66 & 47.18              \\            Complementary            & 0.85  & 7.08 & 1.46 & 12.14              \\            Davenport            & 0.93  & 7.75 & 1.36 & 11.35              \\            EKF            & 1.02  & 8.50 & 0.92 & 7.66              \\            FAMC            & 4.23  & 35.23 & 6.19 & 51.56              \\            FLAE            & 0.91  & 7.54 & 1.30 & 10.82              \\            Fourati            & 7.04  & 58.67 & 8.32 & 69.35              \\            Madgwick            & 1.68  & 14.03 & 2.00 & 16.63              \\            Mahony            & 0.79  & 6.60 & 0.97 & 8.11              \\            OLEQ            & 0.79  & 6.57 & 1.02 & 8.53              \\            QUEST            & 2.46  & 20.54 & 3.30 & 27.49              \\            ROLEQ            & 0.78  & 6.54 & 0.84 & 6.98              \\            SAAM            & 0.87  & 7.24 & 1.10 & 9.16              \\            Tilt            & 0.87  & 7.24 & 1.10 & 9.16              \\
+                AngularRate   & 4.53                    & 37.72                  & 7.35            & 61.28          \\
+                AQUA          & 3.10                    & 25.82                  & 4.27            & 35.61          \\
+                Complementary & 3.85                    & 32.08                  & 3.43            & 28.59          \\
+                Davenport     & 1.12                    & 9.30                   & 1.39            & 11.57          \\
+                EKF           & 1.24                    & 10.31                  & 0.49            & 4.09           \\
+                FAMC          & 4.43                    & 36.90                  & 7.12            & 59.37          \\
+                FLAE          & 1.09                    & 9.08                   & 1.32            & 11.00          \\
+                Fourati       & 7.36                    & 61.33                  & 8.47            & 70.60          \\
+                Madgwick      & 1.94                    & 16.15                  & 1.02            & 8.51           \\
+                Mahony        & 0.90                    & 7.50                   & 0.99            & 8.28           \\
+                OLEQ          & 1.18                    & 9.81                   & 1.03            & 8.58           \\
+                QUEST         & 2.84                    & 23.65                  & 2.58            & 21.50          \\
+                ROLEQ         & 1.17                    & 9.71                   & 0.85            & 7.06           \\
+                SAAM          & 1.05                    & 8.71                   & 1.08            & 9.01           \\
+                Tilt          & 1.05                    & 8.71                   & 1.08            & 9.01           \\
+
                 \hline
-                Average     & 2.04                    & 17.02                  & 2.80            & 23.36
+                Average       & 2.45                    & 20.45                  & 2.83            & 23.60
             \end{tabular}
         }
         \caption{4 meter triangle position estimation error (displacement and turn) of the sensor fusion algorithms. }
