--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1303,3 +1303,19 @@
   author       = {Online},
   note         = {Accessed: 2021-04-29}
 }
+
+@article{weisstein2003rotation,
+  title     = {Rotation matrix},
+  author    = {Weisstein, Eric W},
+  journal   = {https://mathworld. wolfram. com/},
+  year      = {2003},
+  publisher = {Wolfram Research, Inc.}
+}
+
+@inproceedings{gruber2000mathematics,
+  title     = {The mathematics of the 3D rotation matrix},
+  author    = {Gruber, Diana},
+  booktitle = {Xtreme Game Developers Conference},
+  pages     = {1--14},
+  year      = {2000}
+}
