New overall table

--- a/tables/overall.tex
+++ b/tables/overall.tex
@@ -5,23 +5,23 @@
                 \hline
                 Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 4.50                    & 37.47                  & 6.51            & 54.28          \\
-                AQUA          & 2.91                    & 24.24                  & 5.66            & 47.18          \\
-                Complementary & 0.85                    & 7.08                   & 1.46            & 12.14          \\
-                Davenport     & 0.93                    & 7.75                   & 1.36            & 11.35          \\
-                EKF           & 1.02                    & 8.50                   & 0.92            & 7.66           \\
-                FAMC          & 4.23                    & 35.23                  & 6.19            & 51.56          \\
-                FLAE          & 0.91                    & 7.54                   & 1.30            & 10.82          \\
-                Fourati       & 7.04                    & 58.67                  & 8.32            & 69.35          \\
-                Madgwick      & 1.68                    & 14.03                  & 2.00            & 16.63          \\
-                Mahony        & 0.79                    & 6.60                   & 0.97            & 8.11           \\
-                OLEQ          & 0.79                    & 6.57                   & 1.02            & 8.53           \\
-                QUEST         & 2.46                    & 20.54                  & 3.30            & 27.49          \\
-                ROLEQ         & 0.78                    & 6.54                   & 0.84            & 6.98           \\
-                SAAM          & 0.87                    & 7.24                   & 1.10            & 9.16           \\
-                Tilt          & 0.87                    & 7.24                   & 1.10            & 9.16           \\
+                AngularRate   & 16.35                   & 23.53                  & 25.96           & 39.64          \\
+                AQUA          & 6.45                    & 18.51                  & 9.15            & 26.54          \\
+                Complementary & 5.49                    & 10.28                  & 6.72            & 13.44          \\
+                Davenport     & 2.27                    & 4.96                   & 3.01            & 7.95           \\
+                EKF           & 2.59                    & 6.71                   & 3.21            & 9.27           \\
+                FAMC          & 15.43                   & 22.11                  & 22.57           & 35.22          \\
+                FLAE          & 2.42                    & 5.02                   & 3.19            & 7.96           \\
+                Fourati       & 24.19                   & 36.14                  & 31.87           & 48.16          \\
+                Madgwick      & 3.86                    & 8.35                   & 4.64            & 10.42          \\
+                Mahony        & 1.94                    & 3.72                   & 2.93            & 6.97           \\
+                OLEQ          & 2.65                    & 4.65                   & 3.17            & 7.99           \\
+                QUEST         & 10.69                   & 22.55                  & 16.34           & 30.34          \\
+                ROLEQ         & 2.71                    & 4.92                   & 3.35            & 7.92           \\
+                SAAM          & 2                       & 4.12                   & 2.79            & 6.93           \\
+                Tilt          & 2                       & 4.12                   & 2.79            & 6.93           \\
                 \hline
-                Average       & 2.04                    & 17.02                  & 2.80            & 23.36
+                Average       & 6.736                   & 11.97933333            & 9.446           & 17.712
             \end{tabular}
         }
         \caption{ Overall ranking of how every algorithm performed in the given test. }
