--- a/tables/squares/square16.tex
+++ b/tables/squares/square16.tex
@@ -26,7 +26,8 @@
                 Average       & 9.48                    & 14.81                  & 10.13           & 15.83
             \end{tabular}
         }
-        \caption{Accelerometer Specifications. }
-        \label{tab:accelerometer_specification}
-    \end{center}
+    \end{center}        
+    \caption{16 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
+    \label{tab:16_square}
+
 \end{table}
