--- a/tables/overall.tex
+++ b/tables/overall.tex
@@ -21,7 +21,7 @@
                 SAAM          & 2                       & 4.12                   & 2.79            & 6.93           \\
                 Tilt          & 2                       & 4.12                   & 2.79            & 6.93           \\
                 \hline
-                Average       & 6.736                   & 11.97933333            & 9.446           & 17.712
+                Average       & 6.74                    & 11.98                  & 9.45            & 17.71
             \end{tabular}
         }
         \caption{ Overall ranking of how every algorithm performed in the given test. }
