--- a/figures/ECEF.tex
+++ b/figures/ECEF.tex
@@ -8,7 +8,7 @@
 
 \begin{tikzpicture}[scale=5,tdplot_main_coords]
     \coordinate (O) at (0,0,0);
-    \draw[thick,->] (0,0,0) -- (1,0,0) node[anchor=north east]{$X{\text{ECEF}}$};
+    \draw[thick,->] (0,0,0) -- (1,0,0) node[anchor=north east]{$X_{\text{ECEF}}$};
     \draw[thick,->] (0,0,0) -- (0,1,0) node[anchor=north west]{$Y_{\text{ECEF}}$};
     \draw[thick,->] (0,0,0) -- (0,0,1) node[anchor=south]{$Z_{\text{ECEF}}$};
 
