--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1319,3 +1319,25 @@
   pages     = {1--14},
   year      = {2000}
 }
+
+@article{toso2015esa,
+  title     = {ESA multibody simulator for spacecrafts’ ascent and landing in a microgravity environment},
+  author    = {Toso, Mario and Pennestr{\`\i}, Ettore and Rossi, Valerio},
+  journal   = {CEAS Space Journal},
+  volume    = {7},
+  number    = {3},
+  pages     = {335--346},
+  year      = {2015},
+  publisher = {Springer}
+}
+
+@article{funda1990homogeneous,
+  title     = {On homogeneous transforms, quaternions, and computational efficiency},
+  author    = {Funda, Janez and Taylor, Russell H and Paul, Richard P},
+  journal   = {IEEE transactions on Robotics and Automation},
+  volume    = {6},
+  number    = {3},
+  pages     = {382--388},
+  year      = {1990},
+  publisher = {IEEE}
+}
