--- a/thesis.tex
+++ b/thesis.tex
@@ -31,22 +31,24 @@
 
 \setcounter{page}{1}
 \pagenumbering{arabic}
-%\linenumbers
-\input{chapters/1_introduction}
-\newpage
-\input{chapters/2_background}
-\newpage
-\input{chapters/3_related_work}
-\newpage
-\input{chapters/4_experimental_setup}
-\newpage
-\input{chapters/5_methodology}
-\newpage
-\input{chapters/6_results}
-\newpage
-\input{chapters/7_discussion}
-\newpage
-\input{chapters/8_conclusion}
+\begin{justify}
+    %\linenumbers
+    \input{chapters/1_introduction}
+    \newpage
+    \input{chapters/2_background}
+    \newpage
+    \input{chapters/3_related_work}
+    \newpage
+    \input{chapters/4_experimental_setup}
+    \newpage
+    \input{chapters/5_methodology}
+    \newpage
+    \input{chapters/6_results}
+    \newpage
+    \input{chapters/7_discussion}
+    \newpage
+    \input{chapters/8_conclusion}
+\end{justify}
 
 %\nolinenumbers
 
