--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1341,3 +1341,14 @@
   year      = {1990},
   publisher = {IEEE}
 }
+
+@article{el2007temperature,
+  title     = {Temperature variation effects on stochastic characteristics for low-cost MEMS-based inertial sensor error},
+  author    = {El-Diasty, M and El-Rabbany, A and Pagiatakis, S},
+  journal   = {Measurement Science and Technology},
+  volume    = {18},
+  number    = {11},
+  pages     = {3321},
+  year      = {2007},
+  publisher = {IOP Publishing}
+}
