--- a/tables/triangles/triangle28.tex
+++ b/tables/triangles/triangle28.tex
@@ -27,6 +27,6 @@
             \end{tabular}
         }
         \caption{28 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
-        \label{tab:28_square}
+        \label{tab:28_triangle}
     \end{center}
 \end{table}
