--- a/settings.tex
+++ b/settings.tex
@@ -40,6 +40,8 @@
 \usepackage{tikz-3dplot}
 \usepackage{tikz}
 \usepackage{listings}
+\usepackage{longtable}
+\usepackage[acronym]{glossaries}
 
 % \DeclareUnicodeCharacter{2212}{-}
 
