Add new glossaries

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -1,7 +1,7 @@
 \newacronym{gnss}{GNSS}{Global Navigation Satellite System}
-\newacronym{imu}{IMU}{Inertial measurement unit}
+\newacronym{imu}{IMU}{Inertial Measurement Unit}
 \newacronym{uav}{UAV}{Unmanned Aerial Vehicle}
-\newacronym{iot}{Iot}{Internet of Things}
+\newacronym{iot}{IoT}{Internet of Things}
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{glonass}{GLONASS}{Globalnaya Navigatsionnaya Sputnikovaya Sistema}
 \newacronym{enu}{ENU}{East North Up}
